[tool.poetry]
name = "repl_python3_NIB-KEEPALIVE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
httplib2 = "^0.20.2"
replit = "^3.2.4"
youtube_dl = "^2021.6.6"
toml = "^0.10.2"
pafy = "^0.5.5"
pip = "^21.3.1"
PyNaCl = "^1.5.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
